fix: license & badge

--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
   <url>https://github.com/parenthesin/components</url>
   <licenses>
     <license>
-      <name>Eclipse Public License</name>
-      <url>http://www.eclipse.org/legal/epl-v10.html</url>
+      <name>Unlicense</name>
+      <url>https://unlicense.org</url>
     </license>
   </licenses>
   <developers>
