--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>components</artifactId>
   <version>0.1.0-SNAPSHOT</version>
   <name>com.github.parenthesin/components</name>
-  <description>FIXME: my new library.</description>
+  <description>Common components used on the Parenthesin's service templates.</description>
   <url>https://github.com/parenthesin/components</url>
   <licenses>
     <license>
