--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -17,6 +17,7 @@ jobs:
       matrix:
         namespace: [ unit, integration ]
         operating-system: [ubuntu-latest]
+        jdk: [11, 21]
 
     runs-on: ${{ matrix.operating-system }}
 
@@ -27,8 +28,8 @@ jobs:
       - name: Prepare java
         uses: actions/setup-java@v4
         with:
-          distribution: 'adopt'
-          java-version: '11'
+          distribution: 'temurin'
+          java-version: ${{ matrix.jdk }}
 
       - name: Install clojure cli
         uses: DeLaGuardo/setup-clojure@master
